--- a/msdscript/Makefile
+++ b/msdscript/Makefile
@@ -1,5 +1,5 @@
-msdscript: main.cpp cmdline.cpp cmdline.hpp expr.hpp expr.cpp catch.h
-	c++ --std=c++14 -O2 -o msdscript main.cpp cmdline.cpp expr.cpp
+msdscript: main.cpp cmdline.cpp cmdline.hpp expr.hpp expr.cpp catch.h parse.cpp parse.hpp
+	c++ --std=c++14 -O2 -o msdscript main.cpp cmdline.cpp expr.cpp parse.cpp
 .PHONY:test
 test: msdscript
 	./msdscript --test
