--- a/msdscript/Makefile
+++ b/msdscript/Makefile
@@ -1,6 +1,6 @@
 
-msdscript: main.cpp cmdline.cpp expr.cpp parse.cpp cmdline.hpp expr.hpp parse.hpp catch.h
-	c++ --std=c++14 -O2 -o msdscript main.cpp cmdline.cpp expr.cpp parse.cpp
+msdscript: main.cpp cmdline.cpp expr.cpp parse.cpp cmdline.hpp expr.hpp parse.hpp catch.h Val.hpp Val.cpp
+	c++ --std=c++14 -O2 -o msdscript main.cpp cmdline.cpp expr.cpp parse.cpp Val.cpp
 
 .PHONY: test
 test: msdscript
