--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and run tests
       run: make test
-      working-directory: msdscript/msdscript
+      working-directory: msdscript
